--- a/src/app/league-zone/league-standings/coach-standings/coach-standings.component.scss
+++ b/src/app/league-zone/league-standings/coach-standings/coach-standings.component.scss
@@ -1,3 +1,5 @@
+@use "../../league.mixins" as *;
+
 .standing-container {
   border: 1px solid var(--pdz-color-primary-border);
   border-radius: var(--pdz-shape-corner-sm);
@@ -65,19 +67,8 @@
   }
 
   .logo-cell {
-    width: 3rem;
-    height: 3rem;
-    border-radius: 2rem;
-    border-width: 2px;
-    overflow: hidden;
-    box-shadow: var(--pdz-level-1);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    img {
-      max-width: 100%;
-      max-height: 100%;
-    }
+    @include pdz-league-logo(3.5rem);
+    padding: 0.25rem;
   }
 
   .team-cell {
