--- a/src/app/league-zone/league-teams/league-teams.component.html
+++ b/src/app/league-zone/league-teams/league-teams.component.html
@@ -3,10 +3,14 @@
     <h1 class="teams-title">League Teams</h1>
   </div>
   <div class="teams-container">
-    @for (team of teams; track team) {
-      <pdz-league-team-card [teamDetails]="team"></pdz-league-team-card>
-    } @empty {
-      <div>No teams added to this division</div>
+    @if (teams) {
+      @for (team of teams; track team) {
+        <pdz-league-team-card [teamDetails]="team"></pdz-league-team-card>
+      } @empty {
+        <div>No teams added to this division</div>
+      }
+    } @else {
+      <pdz-loading></pdz-loading>
     }
   </div>
 </div>
