--- a/src/app/league-zone/league-drafting/league-drafting.component.scss
+++ b/src/app/league-zone/league-drafting/league-drafting.component.scss
@@ -264,6 +264,7 @@
       flex-grow: 1;
       justify-content: space-between;
       font-family: var(--pdz-font-fancy);
+      min-height: 0;
     }
 
     .my-draft-pokemons {
