--- a/src/app/league-zone/league-teams/league-team-card/league-team-card.component.html
+++ b/src/app/league-zone/league-teams/league-team-card/league-team-card.component.html
@@ -81,11 +81,21 @@
                   </td>
                 }
                 <td class="cell-tier">
-                  {{ pokemon.tier }}
+                  {{ pokemon.cost }}
                 </td>
               </tr>
             }
           </tbody>
+          <tfoot>
+            <tr>
+              <th class="col-sprite"></th>
+              <th class="col-name"></th>
+              @if (hasCapt()) {
+                <th class="col-capt">{{ totalCaptCount() }}</th>
+              }
+              <th class="col-tier">{{ totalCost() }}</th>
+            </tr>
+          </tfoot>
         </table>
       </div>
     }
